--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.basicinvite.com/index.php*"],
+      "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
   ],
